@@ -1,3 +1,14 @@
+2021-06-04  Filip Pizlo  <fpizlo@apple.com>
+
+        Don't emit the NotDouble checks if we're already NotDouble.
+
+        Rubber stamped by Saam Barati.
+
+        * dfg/DFGSpeculativeJIT.cpp:
+        (JSC::DFG::SpeculativeJIT::speculateNotDouble):
+        * ftl/FTLLowerDFGToB3.cpp:
+        (JSC::FTL::DFG::LowerDFGToB3::speculateNotDouble):
+
 2021-06-04  Mark Lam  <mark.lam@apple.com>
 
         Placate exception checker validation in objectPrototypeHasOwnProperty.
